Finished glyphicon sizing and css, also no longer breaks on resize

--- a/public/modules/giftcards/css/giftcards.css
+++ b/public/modules/giftcards/css/giftcards.css
@@ -365,7 +365,7 @@ label.inputlabel {
 }
 
 .flatRowListItem {
-    background-color: rgba(0,0,0,0.2) ;
+    background-color: rgba(0,0,0,0.25) ;
     border: none;
     margin-bottom: 2px;
     padding: 5px;
@@ -381,8 +381,9 @@ label.inputlabel {
 .flatRowListItem .glyphicon {
     position: absolute;
     right: 0;
-    padding-top: 6%;
-    padding-right: 2%
+    padding-top: 5px;
+    padding-right: 5px;
+    font-size: 50px;
 }
 /* End Clique Code Styles */
 
